--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:emulator": "serve -s out",
     "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "eslint",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
