--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.1",
+    "react-responsive": "^10.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
