--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
