--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.1",
     "react-responsive": "^10.0.1",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
