--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export",
     "start": "next start",
     "lint": "eslint",
+    "load:decks": "node ./scripts/deck-loader.js",
     "deploy": "npm run build && npx shx touch ./out/.nojekyll && npx gh-pages -d out",
     "11ty:build": "eleventy",
     "11ty:serve": "eleventy --serve",
@@ -56,6 +57,7 @@
     "postcss": "^8.5.6",
     "shx": "^0.4.0",
     "tailwindcss": "^3.4.19",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
