feat: add banlist page and functionality
- Introduced a new Banlist page that fetches and displays banlist data from a JSON file.
- Implemented a collapsible accordion for OCG and TCG formats, showing respective banlist sections.
- Created a new data table component for displaying banlist cards with compact styling.
- Added types for banlist data and card types to improve type safety.
- Updated utility functions to handle badge classes for banlist card types.
- Modified existing components to use a unified badge class function.
- Added navigation for the new Banlist page.
- Included loading and alert components for better user experience.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start",
     "lint": "eslint",
     "load:decks": "node ./scripts/deck-loader.js",
+    "load:banlist": "node ./scripts/banlist-loader.js",
     "deploy": "npm run build && npx shx touch ./out/.nojekyll && npx gh-pages -d out",
     "11ty:build": "eleventy",
     "11ty:serve": "eleventy --serve",
