--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.2.1",
     "react-responsive": "^10.0.1",
     "recharts": "^2.15.4",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
